--- a/index.html
+++ b/index.html
@@ -14,129 +14,225 @@
 </head>
 <body>
 
-  <h1>
-    Social Media Dashboard
-  </h1>
-  <h4>
-    Total Followers: 23,004
-  </h4>
+  <header>
+    <h2>
+      Social Media Dashboard
+    </h2>
+    <h4>
+      Total Followers: 23,004
+    </h4>
+  </header>
 
-  <h6>
-    Dark Mode
-  </h6>
-
-  <!-- Rounded toggle switch by w3schools.com-->
-  <label class="switch">
-    <input type="checkbox">
-    <span class="slider round"></span>
-  </label>
-
-  
-
-  <div class="tarjetaGrandes">
-    <img src="images/icon-facebook.svg" alt="Facebook">
-    @nathanf
-    1987
-    Followers
-    <img src="images/icon-up.svg" alt="En alza">
-    12 Today
+  <div class="optionSwitch">
+      Dark Mode
+    <!-- Rounded toggle switch by w3schools.com-->
+    <label class="switch">
+      <input type="checkbox">
+      <span class="slider round"></span>
+    </label>
   </div>
 
-  <div class="tarjetaGrande">
-    <img src="images/icon-twitter.svg" alt="Twitter">
-    @nathanf
-    1044
-    Followers
-    <img src="images/icon-up.svg" alt="En alza">
-    99 Today
+  <div id="mainFacebookCard" class="mainCard">
+    <div class="socialTitle">
+      <img src="images/icon-facebook.svg" alt="Facebook">
+      @nathanf
+    </div>
+    <div class="mainNumber">
+      1987
+    </div>
+    <p>
+      Followers
+    </p>
+    <div class="status">
+      <img src="images/icon-up.svg" alt="En alza">
+      12 Today
+    </div>
   </div>
 
-  <div class="tarjetaGrande">
-    <img src="images/icon-instagram.svg" alt="Instagram">
-    @realnathanf
-    11k
-    Followers
-    <img src="images/icon-up.svg" alt="En alza">
-    1099 Today
+  <div id="mainTwitterCard" class="mainCard">
+    <div class="socialTitle">
+      <img src="images/icon-twitter.svg" alt="Twitter">
+      @nathanf
+    </div>
+    <div class="mainNumber">
+      1044
   </div>
 
-  <div class="tarjetaGrande">
-    <img src="images/icon-youtube.svg" alt="YouTube">
-    Nathan F.
-    8239
-    Subscribers
-    <img src="images/icon-down.svg" alt="En baja">
-    144 Today
+    <p>
+      Followers
+    </p>
+    <div class="status">
+      <img src="images/icon-up.svg" alt="En alza">
+      99 Today
+    </div>
+  </div>
+
+  <div id="mainInstagramCard" class="mainCard">
+    <div class="socialTitle">
+      <img src="images/icon-instagram.svg" alt="Instagram">
+      @realnathanf
+    </div>
+    <div class="mainNumber">
+      11k
+    </div>
+    <p>
+      Followers
+    </p>
+    <div class="status">
+      <img src="images/icon-up.svg" alt="En alza">
+      1099 Today
+    </div>
+  </div>
+
+  <div id="mainYouTubeCard" class="mainCard">
+    <div class="socialTitle">
+      <img src="images/icon-youtube.svg" alt="YouTube">
+      Nathan F.
+    </div>
+    <div class="mainNumber">
+      8239
+    </div>
+    <p>
+      Subscribers
+    </p>
+    <div class="status redStatus">
+      <img src="images/icon-down.svg" alt="En baja">
+      144 Today
+    </div>
   </div>
 
 
 
-  <h2>
+  <h3>
     Overview - Today
-  </h2>
+  </h3>
 
-  <div class="tarjetaPequena">
-    Page Views
-    <img src="images/icon-facebook.svg" alt="Facebook">
-    87
-    <img src="images/icon-up.svg" alt="En alza">
-    3%
+  <div class="smallCard">
+    <div class="scLine1">
+      Page Views
+      <img src="images/icon-facebook.svg" alt="Facebook">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        87
+      </div>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        3%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Likes
-    <img src="images/icon-facebook.svg" alt="Facebook">
-    52
-    <img src="images/icon-down.svg" alt="En baja">
-    2%
+  <div class="smallCard">
+    <div class="scLine1">
+      Likes
+      <img src="images/icon-facebook.svg" alt="Facebook">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        52
+      </div>
+      <div class="status redStatus">
+        <img src="images/icon-down.svg" alt="En baja">
+        2%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Likes
-    <img src="images/icon-instagram.svg" alt="Instagram">
-    5462
-    <img src="images/icon-up.svg" alt="En alza">
-    2257%
+  <div class="smallCard">
+    <div class="scLine1">
+      Likes
+      <img src="images/icon-instagram.svg" alt="Instagram">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        5462
+      </div>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        2257%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Profile Views
-    <img src="images/icon-instagram.svg" alt="Instagram">
-    52k
-    <img src="images/icon-up.svg" alt="En alza">
-    1375%
+  <div class="smallCard">
+    <div class="scLine1">
+      Profile Views
+      <img src="images/icon-instagram.svg" alt="Instagram">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        52k
+      </div>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        1375%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Retweets
-    <img src="images/icon-twitter.svg" alt="Twitter">
-    117
-    <img src="images/icon-up.svg" alt="En alza">
-    303%
+  <div class="smallCard">
+    <div class="scLine1">
+      Retweets
+      <img src="images/icon-twitter.svg" alt="Twitter">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        117
+      </div>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        303%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Likes
-    <img src="images/icon-twitter.svg" alt="Twitter">
-    507
-    <img src="images/icon-up.svg" alt="En alza">
-    553%
+  <div class="smallCard">
+    <div class="scLine1">
+      Likes
+      <img src="images/icon-twitter.svg" alt="Twitter">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        507
+      </div>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        553%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Likes
-    <img src="images/icon-youtube.svg" alt="YouTube">
-    107
-    <img src="images/icon-down.svg" alt="En baja">
-    19%
+  <div class="smallCard">
+    <div class="scLine1">
+      Likes
+      <img src="images/icon-youtube.svg" alt="YouTube">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        107
+      </div>
+      <div class="status redStatus">
+        <img src="images/icon-down.svg" alt="En baja">
+        19%
+      </div>
+    </div>
   </div>
 
-  <div class="tarjetaPequena">
-    Total Views
-    <img src="images/icon-youtube.svg" alt="YouTube">
-    1407
-    <img src="images/icon-down.svg" alt="En baja">
-    12%
+  <div class="smallCard">
+    <div class="scLine1">
+      Total Views
+      <img src="images/icon-youtube.svg" alt="YouTube">
+    </div>
+    <div class="scLine2">
+      <div class="todayNumber">
+        1407
+      </div>
+      <div class="status redStatus">
+        <img src="images/icon-down.svg" alt="En baja">
+        12%
+      </div>
+    </div>
   </div>
   
   <div class="attribution">
