--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
   <div id="mainFacebookCard" class="mainCard">
     <div class="socialTitle">
       <img src="images/icon-facebook.svg" alt="Facebook">
-      @nathanf
+      <div class="subscriber">
+        @nathanf
+      </div>
     </div>
     <div class="mainNumber">
       1987
@@ -52,7 +54,9 @@
   <div id="mainTwitterCard" class="mainCard">
     <div class="socialTitle">
       <img src="images/icon-twitter.svg" alt="Twitter">
-      @nathanf
+      <div class="subscriber">
+        @nathanf
+      </div>
     </div>
     <div class="mainNumber">
       1044
@@ -70,7 +74,9 @@
   <div id="mainInstagramCard" class="mainCard">
     <div class="socialTitle">
       <img src="images/icon-instagram.svg" alt="Instagram">
-      @realnathanf
+      <div class="subscriber">
+        @realnathanf
+      </div>
     </div>
     <div class="mainNumber">
       11k
@@ -87,7 +93,9 @@
   <div id="mainYouTubeCard" class="mainCard">
     <div class="socialTitle">
       <img src="images/icon-youtube.svg" alt="YouTube">
-      Nathan F.
+      <div class="subscriber">
+        Nathan F.
+      </div>
     </div>
     <div class="mainNumber">
       8239
