Completo. Responsivo. DarkMode implementado.

--- a/index.html
+++ b/index.html
@@ -8,244 +8,249 @@
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
   <!-- Link de Tipografia -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
+  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">  -->
   <!-- Link de Hojas de Estilo -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-  <header>
-    <h2>
-      Social Media Dashboard
-    </h2>
-    <h4>
-      Total Followers: 23,004
-    </h4>
-  </header>
-
-  <div class="optionSwitch">
-      Dark Mode
-    <!-- Rounded toggle switch by w3schools.com-->
-    <label class="switch">
-      <input type="checkbox">
-      <span class="slider round"></span>
-    </label>
-  </div>
-
-  <div id="mainFacebookCard" class="mainCard">
-    <div class="socialTitle">
-      <img src="images/icon-facebook.svg" alt="Facebook">
-      <div class="subscriber">
-        @nathanf
-      </div>
-    </div>
-    <div class="mainNumber">
-      1987
-    </div>
-    <p>
-      Followers
-    </p>
-    <div class="status">
-      <img src="images/icon-up.svg" alt="En alza">
-      12 Today
-    </div>
-  </div>
-
-  <div id="mainTwitterCard" class="mainCard">
-    <div class="socialTitle">
-      <img src="images/icon-twitter.svg" alt="Twitter">
-      <div class="subscriber">
-        @nathanf
-      </div>
-    </div>
-    <div class="mainNumber">
-      1044
-  </div>
-
-    <p>
-      Followers
-    </p>
-    <div class="status">
-      <img src="images/icon-up.svg" alt="En alza">
-      99 Today
-    </div>
-  </div>
-
-  <div id="mainInstagramCard" class="mainCard">
-    <div class="socialTitle">
-      <img src="images/icon-instagram.svg" alt="Instagram">
-      <div class="subscriber">
-        @realnathanf
-      </div>
-    </div>
-    <div class="mainNumber">
-      11k
-    </div>
-    <p>
-      Followers
-    </p>
-    <div class="status">
-      <img src="images/icon-up.svg" alt="En alza">
-      1099 Today
-    </div>
-  </div>
-
-  <div id="mainYouTubeCard" class="mainCard">
-    <div class="socialTitle">
-      <img src="images/icon-youtube.svg" alt="YouTube">
-      <div class="subscriber">
-        Nathan F.
-      </div>
-    </div>
-    <div class="mainNumber">
-      8239
-    </div>
-    <p>
-      Subscribers
-    </p>
-    <div class="status redStatus">
-      <img src="images/icon-down.svg" alt="En baja">
-      144 Today
-    </div>
-  </div>
-
-
-
-  <h3>
-    Overview - Today
-  </h3>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Page Views
-      <img src="images/icon-facebook.svg" alt="Facebook">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        87
-      </div>
-      <div class="status">
-        <img src="images/icon-up.svg" alt="En alza">
-        3%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Likes
-      <img src="images/icon-facebook.svg" alt="Facebook">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        52
-      </div>
-      <div class="status redStatus">
-        <img src="images/icon-down.svg" alt="En baja">
-        2%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Likes
-      <img src="images/icon-instagram.svg" alt="Instagram">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        5462
-      </div>
-      <div class="status">
-        <img src="images/icon-up.svg" alt="En alza">
-        2257%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Profile Views
-      <img src="images/icon-instagram.svg" alt="Instagram">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        52k
-      </div>
-      <div class="status">
-        <img src="images/icon-up.svg" alt="En alza">
-        1375%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Retweets
-      <img src="images/icon-twitter.svg" alt="Twitter">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        117
-      </div>
-      <div class="status">
-        <img src="images/icon-up.svg" alt="En alza">
-        303%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Likes
-      <img src="images/icon-twitter.svg" alt="Twitter">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        507
-      </div>
-      <div class="status">
-        <img src="images/icon-up.svg" alt="En alza">
-        553%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Likes
-      <img src="images/icon-youtube.svg" alt="YouTube">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        107
-      </div>
-      <div class="status redStatus">
-        <img src="images/icon-down.svg" alt="En baja">
-        19%
-      </div>
-    </div>
-  </div>
-
-  <div class="smallCard">
-    <div class="scLine1">
-      Total Views
-      <img src="images/icon-youtube.svg" alt="YouTube">
-    </div>
-    <div class="scLine2">
-      <div class="todayNumber">
-        1407
-      </div>
-      <div class="status redStatus">
-        <img src="images/icon-down.svg" alt="En baja">
-        12%
-      </div>
-    </div>
-  </div>
+  <div class="topBG"></div>
+  <div class="myGrid">
+    <header>
+      <h2>
+        Social Media Dashboard
+      </h2>
+      <h4>
+        Total Followers: 23,004
+      </h4>
+    </header>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Pablo Malave</a>.
+    <div class="optionSwitch">
+        Dark Mode
+      <!-- Rounded toggle switch by w3schools.com-->
+      <label class="switch">
+        <input type="checkbox">
+        <span class="slider round"></span>
+      </label>
+    </div>
+  
+    <div id="mainFacebookCard" class="mainCard">
+      <div class="socialTitle">
+        <img src="images/icon-facebook.svg" alt="Facebook">
+        <div class="subscriber">
+          @nathanf
+        </div>
+      </div>
+      <div class="mainNumber">
+        1987
+      </div>
+      <p>
+        Followers
+      </p>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        12 Today
+      </div>
+    </div>
+  
+    <div id="mainTwitterCard" class="mainCard">
+      <div class="socialTitle">
+        <img src="images/icon-twitter.svg" alt="Twitter">
+        <div class="subscriber">
+          @nathanf
+        </div>
+      </div>
+      <div class="mainNumber">
+        1044
+    </div>
+  
+      <p>
+        Followers
+      </p>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        99 Today
+      </div>
+    </div>
+  
+    <div id="mainInstagramCard" class="mainCard">
+      <div class="socialTitle">
+        <img src="images/icon-instagram.svg" alt="Instagram">
+        <div class="subscriber">
+          @realnathanf
+        </div>
+      </div>
+      <div class="mainNumber">
+        11k
+      </div>
+      <p>
+        Followers
+      </p>
+      <div class="status">
+        <img src="images/icon-up.svg" alt="En alza">
+        1099 Today
+      </div>
+    </div>
+  
+    <div id="mainYouTubeCard" class="mainCard">
+      <div class="socialTitle">
+        <img src="images/icon-youtube.svg" alt="YouTube">
+        <div class="subscriber">
+          Nathan F.
+        </div>
+      </div>
+      <div class="mainNumber">
+        8239
+      </div>
+      <p>
+        Subscribers
+      </p>
+      <div class="status redStatus">
+        <img src="images/icon-down.svg" alt="En baja">
+        144 Today
+      </div>
+    </div>
+  
+  
+  
+    <h3>
+      Overview - Today
+    </h3>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Page Views
+        <img src="images/icon-facebook.svg" alt="Facebook">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          87
+        </div>
+        <div class="status">
+          <img src="images/icon-up.svg" alt="En alza">
+          3%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Likes
+        <img src="images/icon-facebook.svg" alt="Facebook">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          52
+        </div>
+        <div class="status redStatus">
+          <img src="images/icon-down.svg" alt="En baja">
+          2%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Likes
+        <img src="images/icon-instagram.svg" alt="Instagram">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          5462
+        </div>
+        <div class="status">
+          <img src="images/icon-up.svg" alt="En alza">
+          2257%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Profile Views
+        <img src="images/icon-instagram.svg" alt="Instagram">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          52k
+        </div>
+        <div class="status">
+          <img src="images/icon-up.svg" alt="En alza">
+          1375%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Retweets
+        <img src="images/icon-twitter.svg" alt="Twitter">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          117
+        </div>
+        <div class="status">
+          <img src="images/icon-up.svg" alt="En alza">
+          303%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Likes
+        <img src="images/icon-twitter.svg" alt="Twitter">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          507
+        </div>
+        <div class="status">
+          <img src="images/icon-up.svg" alt="En alza">
+          553%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Likes
+        <img src="images/icon-youtube.svg" alt="YouTube">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          107
+        </div>
+        <div class="status redStatus">
+          <img src="images/icon-down.svg" alt="En baja">
+          19%
+        </div>
+      </div>
+    </div>
+  
+    <div class="smallCard">
+      <div class="scLine1">
+        Total Views
+        <img src="images/icon-youtube.svg" alt="YouTube">
+      </div>
+      <div class="scLine2">
+        <div class="todayNumber">
+          1407
+        </div>
+        <div class="status redStatus">
+          <img src="images/icon-down.svg" alt="En baja">
+          12%
+        </div>
+      </div>
+    </div>
+    
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Pablo Malave</a>.
+    </div>
   </div>
+  <!-- Link to JS -->
+  <script src="js/index.js"></script>
+
 </body>
 </html>
