Completo. Activando Tipografia

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
   <!-- Link de Tipografia -->
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">  -->
+   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">  
   <!-- Link de Hojas de Estilo -->
   <link rel="stylesheet" href="css/style.css">
 </head>
